--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 
     <link rel="stylesheet" href="src/css/reset.css">
     <link rel="stylesheet" href="src/css/styel.css">
+    <link rel="stylesheet" href="src/css/responsive.css">
 </head>
 <body>
 
@@ -27,7 +28,7 @@
             <textarea class="input-texto" cols="40" rows="6" placeholder="Digite seu texto"></textarea>
 
             <div>
-                <h6 class="infomacao">
+                <h6 class="informacao">
                     <img src="src/imagens/iconeMsg.png" alt="icone mensagem">
                     Apenas letras minúsculas e sem acento</h6>
             </div>
