--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <section class="secao-texto">
             <textarea class="input-texto" cols="40" rows="6" placeholder="Digite seu texto"></textarea>
 
-            <div>
+            <div class="informação-card">
                 <h6 class="informacao">
                     <img src="src/imagens/iconeMsg.png" alt="icone mensagem">
                     Apenas letras minúsculas e sem acento</h6>
@@ -57,7 +57,7 @@
             </div>
         </section>
         
-        <section>
+        <section class="msg-saida">
             <textarea  class="mensagem" cols="20" rows="8"></textarea> 
             
             <button id="btnCopiar" onclick="copiar()">Copiar</button>
